# simple-db

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: custom_io_module.h  table_manager_module.h  table_module.h
src/: custom_io_module.c  main.c  table_manager_module.c  table_module.c
